# passport-noir

./: .gitignore  CLAUDE.md  Makefile  NOIR_TECHNICAL_VERIFICATION.md  OPENAC_COMPARISON.md  OpenPassportSwift.podspec  Package.swift  README.md  openAC.md
.github/workflows/: ci.yml  release.yml  swift.yml
Sources/: OpenAC.swift  OpenPassportSwift.swift
Sources/MoproiOSBindings/: mopro.swift
Tests/: OpenACFacadeTests.swift  OpenPassportSwiftTests.swift
benchmark/: agent.md  spec.toml
benchmark/expected/: baseline.toml
benchmark/scripts/: circuit-lint.sh  cross-circuit-check.sh  cross-layer-check.sh  execute-bench.sh  perf-bench.sh  run-all.sh  size-bench.sh  spec-check-abi.py  spec-check.sh  tdd-check.sh
circuits/: Nargo.toml
circuits/composite_show/: Nargo.toml  Prover.toml
circuits/data_integrity/: Nargo.toml  Prover.toml
circuits/device_binding/: Nargo.toml  Prover.toml
circuits/disclosure/: Nargo.toml  Prover.toml
circuits/jwt_x5c_adapter/: Nargo.toml  Prover.toml
circuits/mdoc_adapter/: Nargo.toml  Prover.toml
circuits/openac_core/: Nargo.toml
circuits/show_link/: Nargo.toml  (+1 more)
docs/: v3.2-security-closure.md
mopro-binding/: Cargo.toml
mopro-binding/src/: error.rs  lib.rs  noir.rs  openac.rs  openac_v2.rs  openac_v3.rs
scripts/: gen_mdoc_v1_fixture.py  patch_mopro_fallback.sh  pre-commit  release.sh
spec/: offchain-policy-variant.md  passport-ac-extensions.md  predicate-generalization.md  x509-benchmark.md  x509-circuits.md  x509-contract.md  x509-design.md  x509-ios.md  x509-issues.md  x509-migration.md  x509-multi-agent-review.md
(+39 files in other folders)
